feat(AUTH-BE-004): update email api using i18n
